Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118069

Wrong position reported uppon touch release

    XMLWordPrintable

Details

    • Linux/X11
    • 45d4ccc76 (dev), ca9e3ee30 (6.6), f7c656af6 (tqtc/lts-6.5)

    Description

      Run the attached touch.qml code (e.g. with qml runtime) and touch quickly (no delay between press and release) on item #2. The y position of the touch event is logged to the console (which is relative to the delegate). For instance, I got:
      qml: Pressed: 71.1
      qml: Released: -229.4
      The release position is wrong, it should be ~71, however it's basically:
      70.6 (correct position) - 2 (model.index ) * 150 (delegate height) = - 229.4

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            bweimer Bernd Weimer
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes